--- a/darkforest.toml
+++ b/darkforest.toml
@@ -11,7 +11,7 @@ INITIAL_WORLD_RADIUS = 8000
 ##################################
 # SNARK keys & Perlin parameters #
 ##################################
-DISABLE_ZK_CHECKS = false
+DISABLE_ZK_CHECKS = true
 PLANETHASH_KEY = 6278
 SPACETYPE_KEY = 6279
 BIOMEBASE_KEY = 6270
@@ -22,8 +22,9 @@ PERLIN_LENGTH_SCALE = 16384 # must be a power of two no greater than 16384
 ######################
 # Game configuration #
 ######################
+DESTROY_THRESHOLD = 2
 MAX_NATURAL_PLANET_LEVEL = 256
-TIME_FACTOR_HUNDREDTHS = 300 # speedup/slowdown game
+TIME_FACTOR_HUNDREDTHS = 6000 # speedup/slowdown game
 PERLIN_THRESHOLD_1 = 1
 PERLIN_THRESHOLD_2 = 2
 PERLIN_THRESHOLD_3 = 18
