set token end timestamp

--- a/darkforest.toml
+++ b/darkforest.toml
@@ -4,7 +4,7 @@
 [initializers]
 ADMIN_CAN_ADD_PLANETS = true
 WORLD_RADIUS_LOCKED = false
-TOKEN_MINT_END_TIMESTAMP = 2021-10-05T04:00:00.000Z # Mon Oct 04 2021 21:00:00 GMT-0700 (Pacific Daylight Time)
+TOKEN_MINT_END_TIMESTAMP = 2022-01-04T15:35:00.000Z # Jan 4, 2022, 11:59:00 PM (EST)
 TARGET4_RADIUS = 1600
 INITIAL_WORLD_RADIUS = 8000
 
