--- a/darkforest.toml
+++ b/darkforest.toml
@@ -6,15 +6,15 @@ ADMIN_CAN_ADD_PLANETS = true
 WORLD_RADIUS_LOCKED = false
 TOKEN_MINT_END_TIMESTAMP = 2022-01-05T07:59:59.000Z # Jan 4, 2022, 11:59:59 PM (PST)
 TARGET4_RADIUS = 1600
-INITIAL_WORLD_RADIUS = 8000
+INITIAL_WORLD_RADIUS = 400000 # 400k
 
 ##################################
 # SNARK keys & Perlin parameters #
 ##################################
 DISABLE_ZK_CHECKS = false
-PLANETHASH_KEY = 6278
-SPACETYPE_KEY = 6279
-BIOMEBASE_KEY = 6270
+PLANETHASH_KEY = 2168
+SPACETYPE_KEY = 2169
+BIOMEBASE_KEY = 2160
 PERLIN_MIRROR_X = false
 PERLIN_MIRROR_Y = false
 PERLIN_LENGTH_SCALE = 16384 # must be a power of two no greater than 16384
@@ -23,12 +23,12 @@ PERLIN_LENGTH_SCALE = 16384 # must be a power of two no greater than 16384
 # Game configuration #
 ######################
 SHRINK = 2 # No shrink if 0
-# SHRINK_START = # 2022-01-01T20:00:00.000Z Jan 1, 2022, 12:00:00 PM 
-# ROUND_END = 2022-01-05T07:59:59.000Z # Jan 4, 2022, 11:59:59 PM (PST)
-MIN_RADIUS = 400 # SHOULD be 5% of INITIAL_WORLD_RADIUS.
+SHRINK_START = 2022-01-01T20:00:00.000Z # Jan 1, 2022, 12:00:00 PM 
+ROUND_END = 2022-01-05T07:59:59.000Z # Jan 4, 2022, 11:59:59 PM (PST)
+MIN_RADIUS = 80000 # SHOULD be 20% of INITIAL_WORLD_RADIUS - 80k.
 DESTROY_THRESHOLD = 2
 MAX_NATURAL_PLANET_LEVEL = 256
-TIME_FACTOR_HUNDREDTHS = 6000 # speedup/slowdown game
+TIME_FACTOR_HUNDREDTHS = 500 # speedup/slowdown game
 PERLIN_THRESHOLD_1 = 1
 PERLIN_THRESHOLD_2 = 2
 PERLIN_THRESHOLD_3 = 18
@@ -39,7 +39,7 @@ BIOME_THRESHOLD_1 = 15
 BIOME_THRESHOLD_2 = 17
 PLANET_RARITY = 16384
 PHOTOID_ACTIVATION_DELAY = 14400 # seconds
-LOCATION_REVEAL_COOLDOWN = 10800 # seconds -> 3 hours
+LOCATION_REVEAL_COOLDOWN = 1800 # seconds -> 30 minutes
 CLAIM_PLANET_COOLDOWN = 10800 # seconds
 PLANET_TYPE_WEIGHTS = [
   [
